fix background color in dark mode for social icons

--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -2,7 +2,7 @@
 ---
 
 .list-group-item {
-	background-color: var(--main-background-color);
+	//background-color: var(--main-background-color);
 	color: var(--main-text-color);
 }
 
